Bug 345729 - Changing the directory of documents completely wipes out user's home folder
Summary: Changing the directory of documents completely wipes out user's home folder
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_desktoppath (other bugs)
Version First Reported In: 5.2.2
Platform: Ubuntu Linux
: NOR critical
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
: 345459 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-03-31 14:27 UTC by Daniil Vasin
Modified: 2015-04-09 17:48 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Daniil Vasin 2015-03-31 14:27:02 UTC
After changing my folder paths to another drive, KDE seems to delete everything in my user home folder, including its own configurations, and renders KDE absolutely broken

Reproducible: Always

Steps to Reproduce:
1. Put new paths for your folders
2. Click apply
3. Watch as all of your home folder data disappears

Actual Results:  
Home folder wiped

Expected Results:  
My home folder intact, with symlinks to the new paths of my data

I have a suspicion that specifically changing the documents path causes this
Comment 1 David Edmundson 2015-04-09 16:02:33 UTC
I can't reproduce here and i've been testing for a while.
All the folders moved correctly to the new location.

Setting invalid paths worked as expected.
Nothing in my direct home folder changed.

Note this isn't meant to leave symlinks. It updates ~/.config/user-dirs.dirs which contains these paths.

I'm going to need more information on what exactly you did to reproduce this.
Comment 2 Daniil Vasin 2015-04-09 16:13:46 UTC
I understand that it isn't supposed to leave symlinks. I just noticed that after setting new paths, it would start "moving" documents, but ended up just moving all of the contents of my home folder somewhere (I don't know where). I will try to replicate this error in Virtualbox later to see if it was a fluke of my system, or an error
Comment 3 David Edmundson 2015-04-09 16:15:24 UTC
Can you tell me what your home directory is (echo $HOME)
Comment 4 David Edmundson 2015-04-09 16:15:33 UTC
or rather was.
Comment 5 David Edmundson 2015-04-09 17:37:47 UTC
Found it. Thanks for reporting
Comment 6 David Edmundson 2015-04-09 17:37:52 UTC
*** Bug 345459 has been marked as a duplicate of this bug. ***
Comment 7 David Edmundson 2015-04-09 17:48:42 UTC
Git commit dea169953d222eed2721417210dc8c5e300ae7c0 by David Edmundson.
Committed on 09/04/2015 at 17:47.
Pushed by davidedmundson into branch 'Plasma/5.3'.

Fix check for if listing is parent directory

M  +1    -1    kcms/desktoppaths/globalpaths.cpp

http://commits.kde.org/plasma-desktop/dea169953d222eed2721417210dc8c5e300ae7c0