Fix check for if listing is parent directory

BUG: 345729